# MLOps

./: .pre-commit-config.yaml  Dockerfile  README.md  infer.py  pyproject.toml  run_server.py  train.py  triton_deploy.sh
.dvc/: config
configs/: logistic_regression_config.yaml  lr_config.yaml
data/: X_test.npy.dvc  X_train.npy.dvc  y_test.npy.dvc  y_train.npy.dvc
