[tool.poetry]
name = "logreg iris"
version = "0.1.0"
description = "Trains sklearn logistic regression on iris dataset, saves model in pickle, when using train. When using infer gets the saved model and prints its accuracy, precision and recall"
authors = ["Aleksey Pankov <aapankov3@yandex.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scikit-learn = "^1.3.1"
numpy = "^1.26.0"
pandas = "^2.1.1"
dvc = {extras = ["gdrive"], version = "^3.30.3"}
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
